--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-react": "^7.29.4",
     "husky": "4",
     "lint-staged": "^12.3.7",
-    "prettier": "2.6.1"
+    "prettier": "2.6.1",
+    "typescript": "^4.9.4"
   }
 }
