--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.23",
+    "@types/react": "^18.0.26",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-slick": "^0.23.8",
     "@types/uuid": "^8.3.4",
