--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@emotion/styled": "^11.10.5",
     "@graphql-codegen/cli": "^2.16.4",
     "@next/font": "13.1.1",
+    "@types/dompurify": "^2.4.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.1.4",
+    "dompurify": "^2.4.3",
     "eslint-config-next": "13.1.1",
     "graphql": "^16.6.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-player": "^2.10.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
