--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@graphql-codegen/cli": "^2.16.4",
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.1.1",
     "@types/dompurify": "^2.4.0",
     "@types/node": "18.11.18",
@@ -26,13 +27,15 @@
     "graphql": "^16.6.0",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
     "react-player": "^2.10.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/client-preset": "^1.2.6",
